# mapillary_coverage

./: .dockerignore  .gitignore  0_prepare_network_from_pbf_to_filtered_parquet_germany.ipynb  0_prepare_osm-network_from_pbf_to_filtered_parquet.ipynb  0_prepare_tiles.ipynb  1_get_mapillary_coverage.ipynb  1a_prepare_osm-network_from_pbf_bundesland.ipynb  1a_prepare_tiles.ipynb  1b_get_mapillary_coverage.ipynb  1b_get_mapillary_coverage_alt.ipynb  2_create_buffer_coverage.ipynb  2_create_mapillary_coverage_buffer.ipynb  3_merge_mp-cov_with_osm_use_case_germany.ipynb  3_use_case_maxspeed_completeness.ipynb  4_provide_mp-osm_coverage_csv.ipynb  4_provide_mp-osm_coverage_csv_new.ipynb  LICENSE  README.md  config.example.json  config.example.py  ml_metadata.json  osm_metadata.json  pyproject.toml  requirements.txt
config/: default.toml  local.toml.example
docker/: .env.example  Dockerfile.worker  docker-compose.vpn.yml  docker-compose.yml
output/: README.md  germany_osm-highways_mp-coverage_latest.csv  meta.json  ml_metadata.json  osm_metadata.json
output/berlin_de-be/: README.md
scripts/: run_and_push.sh  run_mapillary_notebooks.sh  run_mapillary_pipeline.sh  upload_outputs_to_b2.sh
src/mapillary_coverage/: __init__.py  __main__.py  buffer.py  bundeslaender.py  cli.py  export.py  mapillary.py  merge.py  notebooks.py  osm.py  runner.py  settings.py
src/mapillary_coverage.egg-info/: PKG-INFO
