[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mapillary-coverage"
version = "0.1.0"
description = "CLI and settings scaffold for the Mapillary coverage pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"geopandas==1.1.1",
	"mercantile==1.2.1",
	"osmium==4.2.0",
	"pandas==2.3.1",
	"pyarrow==21.0.0",
	"pyogrio==0.11.1",
	"python-dateutil==2.9.0.post0",
	"requests==2.32.4",
	"shapely==2.1.1",
	"tqdm==4.67.1",
	"tzdata==2025.2",
	"urllib3==2.5.0",
	"vt2geojson==0.2.1",
]

[project.scripts]
mapillary-coverage = "mapillary_coverage.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]